--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>GIT</title>
     </head>
     <body>
-        <h1>Primeiro arquivo GIT</h1>
         <h1>Segunda atualização, atividade 03.</h1>
         <a href="formVendaInternet.html">Form de Vendas</a>
+        <a href="EduardaMuller.html">Eduarda Müller</a>
     </body> 
 </html>
