mudando os links #1

--- a/EduardaMuller.html
+++ b/EduardaMuller.html
@@ -5,6 +5,7 @@
         <title>GIT</title>
     </head>
     <body>
-        <h1>Primeiro arquivo GIT</h1>
+        <h1>Aluna: Eduarda Müller</h1>
+        <a href="index.html">Voltar para Menu</a>
     </body>
 </html>
