--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>GIT</title>
     </head>
     <body>
-        <h1>Segunda atualização, atividade 03.</h1>
-        <a href="formVendaInternet.html">Form de Vendas</a>
-        <a href="EduardaMuller.html">Eduarda Müller</a>
+        <h1>Menu</h1>
+        <a href="formVendaInternet.html">Vendas pela Internet</a>
+        <a href="EduardaMuller.html">Aluna: Eduarda Müller</a>
     </body> 
 </html>
