--- a/formVendaInternet.html
+++ b/formVendaInternet.html
@@ -5,9 +5,7 @@
         <title>GIT</title>
     </head>
     <body>
-
-        <a href="index.html">Form de Vendas</a>
-        <h1>Segundo arquivo GIT</h1>
-
+        <h1>Vendas pela Internet</h1>
+        <a href="index.html">Voltar para Menu</a>
     </body> 
 </html>
