--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
          <meta charset="utf-8" />
-        <title>GIT</title>
+        <title>Renomeei aqui - teste</title>
     </head>
     <body>
         <h1>Menu</h1>
